Added some contents to the page.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>My page</h1>
-<p>我的主页。</p>
-</body>
+	<head>
+		<meta charset="utf-8" />
+		<title>lxfly2000</title>
+	</head>
+	<body>
+		<h1>My page</h1>
+		<p>
+			我的主页。<br/>
+			* 暂时还很简陋，先将就下吧。<br/>
+		</p>
+			---<br/>
+			<a href="WebParticles">Canvas 粒子</a><br/>
+			<a href="WebBricks">Canvas 别踩白块</a><br/>
+			<a href="Baikuai">Div 别踩白块</a><br/>
+		</p>
+	</body>
 </html>
