--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 			* 暂时还很简陋，先将就下吧。<br/>
 		</p>
 			---<br/>
-			<a href="WebParticles">Canvas 粒子</a><br/>
-			<a href="WebBricks">Canvas 别踩白块</a><br/>
-			<a href="Baikuai">Div 别踩白块</a><br/>
+			<a href="WebParticles/index.html">Canvas 粒子</a><br/>
+			<a href="WebBricks/index.html">Canvas 别踩白块</a><br/>
+			<a href="Baikuai/index.html">Div 别踩白块</a><br/>
 		</p>
 	</body>
 </html>
