--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			<a href="WebParticles/index.html">Canvas 粒子</a><br/>
 			<a href="WebBricks/index.html">Canvas 别踩白块</a><br/>
 			<a href="Baikuai/index.html">Div 别踩白块</a><br/>
+			<a href="webvideo/index.html">视频播放器</a><br/>
 		</p>
 	</body>
 </html>
