--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			<a href="WebBricks/index.html">Canvas 别踩白块</a><br/>
 			<a href="Baikuai/index.html">Div 别踩白块</a><br/>
 			<a href="webvideo/index.html">视频播放器</a><br/>
+			<a href="webmiditest/main.html">MIDI</a><br/>
 		</p>
 	</body>
 </html>
