Supports keyboard control.

--- a/webmiditest/main.html
+++ b/webmiditest/main.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<p>Web MIDI</p>
+		<p>操作方法：点击按钮或按键盘任意键。</p>
 		<p>
 		<input type="button" value="中音C" onclick="o.onSendMiddleC()"/>
 		<input type="button" value="中音D" onclick="o.onSendMiddleD()"/>
