--- a/CutImage/index.html
+++ b/CutImage/index.html
@@ -15,7 +15,7 @@
 			#container .square{
 				width: 300px;
 				height: 300px;
-				border: 1px solid #999;
+				border: 1px solid black;
 				opacity: 0.5;
 				background-color: #999;
 				position: absolute;
