--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			<a href="webvideo/index.html">视频播放器</a><br/>
 			<a href="webmiditest/main.html">MIDI</a><br/>
 			<a href="WebRegister/index.html">表单示例</a><br/>
+			<a href="CutImage/index.html">图片裁剪</a><br/>
 		</p>
 	</body>
 </html>
