--- a/WebRegister/index.html
+++ b/WebRegister/index.html
@@ -17,12 +17,12 @@
 			</div>
 			<div class="row">
 				<div class="fieldlable">密码</div>
-				<input type="text" class="field" name="pwd" check="empty"/>
+				<input type="password" class="field" name="pwd" check="empty"/>
 				<div class="tip">不能为空</div>
 			</div>
 			<div class="row">
 				<div class="fieldlable">确认密码</div>
-				<input type="text" class="field" name="pwd2" check="empty|repw"/>
+				<input type="password" class="field" name="pwd2" check="empty|repw"/>
 				<div class="tip">不能为空</div>
 			</div>
 			<div class="row">
