--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<a href="webmiditest/main.html">MIDI</a><br/>
 			<a href="WebRegister/index.html">表单示例</a><br/>
 			<a href="CutImage/index.html">图片裁剪</a><br/>
+			<a href="SlideImg/index.html">图片滑动</a><br/>
 		</p>
 	</body>
 </html>
