--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>lxfly2000</title>
+		<title>Web 交互设计</title>
 	</head>
 	<body>
 		<h1>My page</h1>
+		<p>此页用于存放Web交互设计课的一些示例。请点击链接查看。</p>
 		<p>
-			我的主页。<br/>
-			* 暂时还很简陋，先将就下吧。<br/>
-		</p><p>
 			---<br/>
 			<a href="WebParticles/index.html">Canvas 粒子</a><br/>
 			<a href="WebBricks/index.html">Canvas 别踩白块</a><br/>
