Added an HTML icon.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Web 交互设计</title>
+		<link rel="icon" href="https://avatars0.githubusercontent.com/u/11847274" />
 	</head>
 	<body>
 		<p>此页用于存放Web交互设计课的一些示例。请点击链接查看。</p>
