--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Web 交互设计</title>
+		<title>Web Tools</title>
 	</head>
 	<body>
-		<p>此页用于存放Web交互设计课的一些示例。请点击链接查看。</p>
+		<p>曾经是学习Web交互时的示例，现在改为Web小工具集合。</p>
 		<p>
 			---<br/>
 			<a href="WebParticles/index.html">Canvas 粒子</a><br/>
@@ -15,6 +15,9 @@
 			<a href="WebRegister/index.html">表单示例</a><br/>
 			<a href="CutImage/index.html">图片裁剪</a><br/>
 			<a href="SlideImg/index.html">图片滑动</a><br/>
+			<a href="bartext.html">bartext</a><br/>
+			<a href="cjkfont.html">cjkfont</a><br/>
+			<a href="textcanvas.html">textcanvas</a><br/>
 		</p>
 	</body>
 </html>
