--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Web Tools</title>
+		<meta name="viewport" content="width=device-width,user-scalable=no"/>
+		<link rel="icon" href="https://avatars0.githubusercontent.com/u/11847274"/>
 	</head>
 	<body>
 		<p>曾经是学习Web交互时的示例，现在改为Web小工具集合。</p>
@@ -15,9 +17,11 @@
 			<a href="WebRegister/index.html">表单示例</a><br/>
 			<a href="CutImage/index.html">图片裁剪</a><br/>
 			<a href="SlideImg/index.html">图片滑动</a><br/>
+			<a href="miditest/index.html">Web MIDI Test</a><br/>
+			<a href="audiotest/index.html">Web Audio Test</a><br/>
 			<a href="bartext.html">bartext</a><br/>
-			<a href="cjkfont.html">cjkfont</a><br/>
-			<a href="textcanvas.html">textcanvas</a><br/>
+			<a href="cjkfont.html">CJK Font</a><br/>
+			<a href="textcanvas.html">Text to Canvas Image</a><br/>
 		</p>
 	</body>
 </html>
