--- a/cjkfont.html
+++ b/cjkfont.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>东亚字体比较</title>
+		<meta name="viewport" content="width=device-width,user-scalable=no"/>
+		<link rel="icon" href="https://avatars0.githubusercontent.com/u/11847274"/>
 	</head>
 	<body>
 		<p>
