--- a/WebRegister/index.html
+++ b/WebRegister/index.html
@@ -28,8 +28,8 @@
 			<div class="row">
 				<div class="fieldlable">性别</div>
 				<div id="sexgroup">
-					<input type="radio" name="sex" checked="checked" value="男"/>男
-					<input type="radio" name="sex" value="女"/>女
+					<input type="radio" name="sex" checked="checked" value="男" id="radio_male"/><label for="radio_male">男</label>
+					<input type="radio" name="sex" value="女" id="radio_female"/><label for="radio_female">女</label>
 				</div>
 			</div>
 			<div class="row">
