--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			<a href="bartext.html">bartext</a><br/>
 			<a href="cjkfont.html">CJK Font</a><br/>
 			<a href="textcanvas.html">Text to Canvas Image</a><br/>
+			<a href="typing.html">Typing</a><br/>
 		</p>
 	</body>
 </html>
