--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			<a href="cjkfont.html">CJK Font</a><br/>
 			<a href="textcanvas.html">Text to Canvas Image</a><br/>
 			<a href="typing.html">Typing</a><br/>
+			<a href="QQStickers/index.html">QQ表情浏览器</a><br/>
 		</p>
 	</body>
 </html>
