--- a/QQStickers/index.html
+++ b/QQStickers/index.html
@@ -5,13 +5,26 @@
 		<title>QQ表情浏览器</title>
 		<meta name="viewport" content="width=device-width,user-scalable=no"/>
 		<link id="emIcon" rel="icon" href="https://avatars0.githubusercontent.com/u/11847274"/>
+		<style>
+			.FloatingButton{
+				position: fixed;
+				bottom: 5px;
+				width: 300px;
+				height: 5em;
+				background-color: rgba(255, 255, 255, 0.5);
+				border: solid gray 2px;
+				max-width: 45%;
+			}
+		</style>
 	</head>
 
 	<body>
 		<p>表情ID：<input type="number" id="editId" style="width: 10em;">
-			<input type="button" value="转到" id="buttonGoto"></p>
-		<p><input type="button" value="上一个" id="buttonToPrev"><input type="button" value="下一个" id="buttonToNext">
-			<input type="checkbox" id="checkAutoUpdate"><label for="checkAutoUpdate">自动跳转</label></p>
+			<input type="button" value="转到" id="buttonGoto">
+			<input type="checkbox" id="checkAutoUpdate"><label for="checkAutoUpdate">自动跳转</label>
+		</p>
+		<input type="button" value="上一个" id="buttonToPrev" class="FloatingButton" style="left: 5px;">
+		<input type="button" value="下一个" id="buttonToNext" class="FloatingButton" style="right: 5px;">
 		<h1 id="textTitle">表情名称</h1>
 		<div>
 			<img id="imgPreview" style="max-width: 100%;" alt="表情预览"/>
@@ -24,6 +37,7 @@
 		<p>标签：<span id="textTags">表情标签</span></p>
 		<p><a id="linkDownload">下载表情</a>
 		<a id="linkUrl">在手机QQ中打开该表情</a></p>
+		<iframe id="frEm" style="width: 100%;height: 5em;"></iframe>
 	</body>
 	<script src="main.js"></script>
 </html>
