--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 			<a href="textcanvas.html">Text to Canvas Image</a><br/>
 			<a href="typing.html">Typing</a><br/>
 			<a href="QQStickers/index.html">QQ表情浏览器</a><br/>
+			<a href="qqdm.html">波动转QQ动漫链接</a><br/>
 		</p>
 	</body>
 </html>
