--- a/cjkfont.html
+++ b/cjkfont.html
@@ -13,6 +13,7 @@
 		</p>
 		国标：<p class="FontText" lang="zh-CN">国标字形</p>
 		台标：<p class="FontText" lang="zh-TW">台灣教育部標準字形</p>
+		香港：<p class="FontText" lang="zh-HK">香港標準字形</p>
 		日标：<p class="FontText" lang="ja">教科書体</p>
 		旧字形：<p class="FontText" lang="ko">傳統字形</p>
 	</body>
