--- a/QQStickers/index.html
+++ b/QQStickers/index.html
@@ -36,7 +36,8 @@
 		</div>
 		<p>标签：<span id="textTags">表情标签</span></p>
 		<p><a id="linkDownload">下载表情</a>
-		<a id="linkUrl">在手机QQ中打开该表情</a></p>
+		<a id="linkUrl">在手机QQ中打开该表情</a>
+		<a id="linkUrlHybrid">在手机QQ中打开该表情（新版）</a></p>
 		<iframe id="frEm" style="width: 100%;height: 5em;"></iframe>
 	</body>
 	<script src="main.js"></script>
