--- a/WebParticles/index.html
+++ b/WebParticles/index.html
@@ -2,19 +2,23 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width,user-scalable=no"/>
 		<title>粒子发生器</title>
 		<style>
-			#canvas1
+			body
 			{
-				width: auto;
-				height: auto;
+				display: flex;
+				justify-content: center; /* 水平居中 */
+				align-items: center;     /* 垂直居中 */
 			}
 		</style>
 		<script type="text/javascript" src="js/particle.js"></script>
 	</head>
 	<body>
-		<canvas id="canvas1" width="960px" height="600px">你的浏览器不支持 Canvas, 请换一个浏览器。</canvas><br/>
-        <input type="button" value="清除" onClick="Game.ClearParticles()"/>
+		<div>
+			<canvas id="canvas1" width="960px" height="600px">你的浏览器不支持 Canvas, 请换一个浏览器。</canvas><br/>
+			<input type="button" value="清除" onClick="Game.ClearParticles()"/>
+		</div>
 	</body>
 	<script type="text/javascript">
 		var Game=new Fireworks(document.querySelector("#canvas1"));
