--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<a href="typing.html">Typing</a><br/>
 			<a href="QQStickers/index.html">QQ表情浏览器</a><br/>
 			<a href="qqdm.html">波动转QQ动漫链接</a><br/>
+			<a href="smear/index.html">曲线激光</a><br/>
 		</p>
 	</body>
 </html>
