--- a/cjkfont.html
+++ b/cjkfont.html
@@ -11,7 +11,10 @@
 			<input type="text" id="textInput" placeholder="在这里输入一些文字……"/>
 			<input type="number" min="9" max="1152" id="fontSize" value="24"/>
 		</p>
-		<p><input type="text" id="userFontFamily" placeholder="指定字体族……"/></p>
+		<p>
+			<input type="text" id="userFontFamily" placeholder="指定字体族……"/>
+			<input type="text" id="userFontWeight" placeholder="指定字重……"/>
+		</p>
 		国标：<p class="FontText" lang="zh-CN">国标字形</p>
 		台标：<p class="FontText" lang="zh-TW">台灣教育部標準字形</p>
 		香港：<p class="FontText" lang="zh-HK">香港標準字形</p>
@@ -33,6 +36,11 @@
 		document.getElementById("userFontFamily").addEventListener("input",function(e){
 			for(var i=0;i<tagTexts.length;i++){
 				tagTexts[i].style.fontFamily=document.getElementById("userFontFamily").value;
+			}
+		});
+		document.getElementById("userFontWeight").addEventListener("input",function(e){
+			for(var i=0;i<tagTexts.length;i++){
+				tagTexts[i].style.fontWeight=document.getElementById("userFontWeight").value;
 			}
 		});
 		for(var i=0;i<tagTexts.length;i++){
