--- a/textcanvas.html
+++ b/textcanvas.html
@@ -13,15 +13,16 @@
 		<input type="text" id="fontname" placeholder="字体名" value="SimSun"/>
 		<input type="number" id="fontsize" min="5" style="width:4em;" placeholder="字号" value="14"/>
 		<input type="number" id="tabwidth" min="0" style="width:4em;" placeholder="制表宽" value="8"/>
+		<input type="number" id="borderwidth" min="0" style="width:4em;" placeholder="描边宽" value="0"/>
 		<br/>
 		<textarea id="te1" style="width:600px;height:8em;max-width:100%;" placeholder="输入文本……"></textarea>
 		<script type="application/javascript">
 			function sd(name){
 				return document.getElementById(name);
 			}
-			function ConfigCanvas(){
+			function ConfigCanvas(textColor){
 				var ccx=sd("canvas1").getContext("2d");
-				ccx.fillStyle="black";
+				ccx.fillStyle=textColor;
 				ccx.font=sd("fontsize").value+"px "+"\""+sd("fontname").value+"\"";
 			}
 			function GenText(){
@@ -32,9 +33,60 @@
 				var maxwidth=200;
 				var singleheight=parseInt(sd("fontsize").value);
 				var tabwidth=parseInt(sd("tabwidth").value);
+				var borderwidth=parseInt(sd("borderwidth").value);
 				for(var step=0;step<2;step++){
 					var cx=0,cy=singleheight;
-					ConfigCanvas();
+					ConfigCanvas("black");
+					var blankwidth=ccx.measureText(" ").width;
+					for(var i=0;i<chs.length;i++){
+						if(chs[i]=="\n"){
+							cy+=singleheight;
+							cx=0;
+						}else if(chs[i]=="\t"){
+							cx=cx-cx%(blankwidth*tabwidth)+blankwidth*tabwidth;
+						}else{
+							cx+=ccx.measureText(chs[i]).width;
+						}
+						if(step==0){
+							maxwidth=Math.max(maxwidth,cx);
+						}
+					}
+					if(step==0){
+						c1.width=maxwidth+2*borderwidth;
+						c1.height=cy+2*borderwidth;
+					}
+				}
+				for(var oy=-borderwidth;oy<=borderwidth;oy++){
+					for(var ox=-borderwidth;ox<=borderwidth;ox++){
+						if(ox==0&&oy==0){
+							continue;
+						}
+						for(var step=0;step<2;step++){
+							var cx=ox+borderwidth,cy=singleheight+oy+borderwidth;
+							ConfigCanvas("black");
+							var blankwidth=ccx.measureText(" ").width;
+							for(var i=0;i<chs.length;i++){
+								if(chs[i]=="\n"){
+									cy+=singleheight;
+									cx=0;
+								}else if(chs[i]=="\t"){
+									cx=cx-cx%(blankwidth*tabwidth)+blankwidth*tabwidth;
+								}else{
+									if(step==1){
+										ccx.fillText(chs[i],cx,cy);
+									}
+									cx+=ccx.measureText(chs[i]).width;
+								}
+								if(step==0){
+									maxwidth=Math.max(maxwidth,cx);
+								}
+							}
+						}
+					}
+				}
+				for(var step=0;step<2;step++){
+					var cx=borderwidth,cy=singleheight+borderwidth;
+					ConfigCanvas(borderwidth==0?"black":"white");
 					var blankwidth=ccx.measureText(" ").width;
 					for(var i=0;i<chs.length;i++){
 						if(chs[i]=="\n"){
@@ -51,10 +103,6 @@
 						if(step==0){
 							maxwidth=Math.max(maxwidth,cx);
 						}
-					}
-					if(step==0){
-						c1.width=maxwidth;
-						c1.height=cy;
 					}
 				}
 				SaveText(sd("te1").value);
