--- a/textcanvas.html
+++ b/textcanvas.html
@@ -43,7 +43,9 @@
 							cy+=singleheight;
 							cx=borderwidth;
 						}else if(chs[i]=="\t"){
+							cx-=borderwidth;
 							cx=cx-cx%(blankwidth*tabwidth)+blankwidth*tabwidth;
+							cx+=borderwidth;
 						}else{
 							cx+=ccx.measureText(chs[i]).width;
 						}
@@ -70,7 +72,9 @@
 									cy+=singleheight;
 									cx=ox+borderwidth;
 								}else if(chs[i]=="\t"){
+									cx-=borderwidth;
 									cx=cx-cx%(blankwidth*tabwidth)+blankwidth*tabwidth;
+									cx+=borderwidth;
 								}else{
 									if(step==1){
 										ccx.fillText(chs[i],cx,cy);
@@ -93,7 +97,9 @@
 							cy+=singleheight;
 							cx=borderwidth;
 						}else if(chs[i]=="\t"){
+							cx-=borderwidth;
 							cx=cx-cx%(blankwidth*tabwidth)+blankwidth*tabwidth;
+							cx+=borderwidth;
 						}else{
 							if(step==1){
 								ccx.fillText(chs[i],cx,cy);
