--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			<a href="bartext.html">bartext</a><br/>
 			<a href="cjkfont.html">CJK Font</a><br/>
 			<a href="textcanvas.html">Text to Canvas Image</a><br/>
+			<a href="textcanvas2.html">Text to Canvas Image 2</a><br/>
 			<a href="typing.html">Typing</a><br/>
 			<a href="QQStickers/index.html">QQ表情浏览器</a><br/>
 			<a href="qqdm.html">波动转QQ动漫链接</a><br/>
