--- a/QQStickers/index.html
+++ b/QQStickers/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>QQ表情浏览器</title>
 		<meta name="viewport" content="width=device-width,user-scalable=no"/>
-		<link id="emIcon" rel="icon" href="https://avatars0.githubusercontent.com/u/11847274"/>
+		<link id="emIcon" rel="icon" href="//avatars.githubusercontent.com/u/11847274"/>
 		<style>
 			.FloatingButton{
 				position: fixed;
