--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<title>Web Tools</title>
 		<meta name="viewport" content="width=device-width,user-scalable=no"/>
-		<link rel="icon" href="https://avatars0.githubusercontent.com/u/11847274"/>
+		<link rel="icon" href="//avatars.githubusercontent.com/u/11847274"/>
 	</head>
 	<body>
 		<p>曾经是学习Web交互时的示例，现在改为Web小工具集合。</p>
