--- a/audiotest/index.html
+++ b/audiotest/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width,user-scalable=no"/>
 		<title>Audio Test</title>
-		<link rel="icon" href="https://avatars0.githubusercontent.com/u/11847274"/>
+		<link rel="icon" href="https://avatars.githubusercontent.com/u/11847274"/>
 		<link rel="stylesheet" href="style.css"/>
 	</head>
 	<body>
