--- a/miditest/index.html
+++ b/miditest/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width,user-scalable=no"/>
 		<title>MIDI</title>
 		<script src="midi.js"></script>
-		<link rel="icon" href="https://avatars0.githubusercontent.com/u/11847274"/>
+		<link rel="icon" href="//avatars.githubusercontent.com/u/11847274"/>
 		<link rel="stylesheet" href="style.css"/>
 	</head>
 	<body>
