--- a/textcanvas.html
+++ b/textcanvas.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<title>文字转图片</title>
 		<meta name="viewport" content="width=device-width,user-scalable=no"/>
-		<link rel="icon" href="https://avatars0.githubusercontent.com/u/11847274"/>
+		<link rel="icon" href="//avatars.githubusercontent.com/u/11847274"/>
 	</head>
 	<body>
 		<canvas id="canvas1" width="200px" height="300px" style="border: 1px solid black"></canvas><br/>
