--- a/textcanvas2.html
+++ b/textcanvas2.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<title>文字转图片</title>
 		<meta name="viewport" content="width=device-width,user-scalable=no"/>
-		<link rel="icon" href="https://avatars0.githubusercontent.com/u/11847274"/>
+		<link rel="icon" href="//avatars.githubusercontent.com/u/11847274"/>
 		<style>
 			@font-face {
 				font-family: "Adobe NotDef";
